@@ -1,3 +1,4 @@
+2740 [OneClick]             disable controls while input detection is ongoing
 2739 [MediaInfo]            removed the external dependency to MediaInfoWrapper.dll
 2738 [OneClick]             fixed detection of audio track names
 2737 [Muxer] + [OneClick]   removed unnecessary "X" buttons
